@@ -148,16 +148,23 @@ static int	_cancel_job(uint32_t jobid, char *comment_ptr,
 	/* Write lock on job info */
 	slurmctld_lock_t job_write_lock = {
 		NO_LOCK, WRITE_LOCK, NO_LOCK, NO_LOCK };
+	struct job_record *job_ptr = find_job_record(jobid);
 
 	lock_slurmctld(job_write_lock);
+	if (job_ptr == NULL) {
+		*err_code = -700;
+		*err_msg = "No such job";
+		error("wiki: Failed to find job %u", jobid);
+		rc = -1;
+		goto fini;
+	}
+
 	if (comment_ptr) {
-		struct job_record *job_ptr = find_job_record(jobid);
-		if (job_ptr == NULL) {
-			*err_code = -700;
-			*err_msg = "No such job";
-			error("wiki: Failed to find job %u", jobid);
-			rc = -1;
-			goto fini;
+		char *reserved = strstr(comment_ptr, "RESERVED:");
+		if (reserved && job_ptr->details) {
+			reserved += 9;
+			job_ptr->details->reserved_resources =
+				strtol(reserved, NULL, 10);
 		}
 		xfree(job_ptr->comment);
 		job_ptr->comment = xstrdup(comment_ptr);
@@ -200,9 +207,16 @@ static int	_timeout_job(uint32_t jobid, char *comment_ptr,
 	}
 
 	if (comment_ptr) {
+		char *reserved = strstr(comment_ptr, "RESERVED:");
+		if (reserved && job_ptr->details) {
+			reserved += 9;
+			job_ptr->details->reserved_resources =
+				strtol(reserved, NULL, 10);
+		}
 		xfree(job_ptr->comment);
 		job_ptr->comment = xstrdup(comment_ptr);
 	}
+
 	job_ptr->end_time = time(NULL);
 	debug("wiki: set end time for job %u", jobid);
 
